After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770545 - It is not possible to execute backend manually with a concrete mount_prefix
It is not possible to execute backend manually with a concrete mount_prefix
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2016-08-29 11:45 UTC by Ondrej Holy
Modified: 2016-08-29 14:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
common: Handle mount_prefix by g_mount_spec_set (1.07 KB, patch)
2016-08-29 11:45 UTC, Ondrej Holy
none Details | Review
common: Handle mount_prefix by g_mount_spec_set (1.20 KB, patch)
2016-08-29 13:53 UTC, Ondrej Holy
committed Details | Review

Description Ondrej Holy 2016-08-29 11:45:56 UTC
Created attachment 334355 [details] [review]
common: Handle mount_prefix by g_mount_spec_set

mount_prefix is set to the value "/export" if you e.g. call the following:
gvfs-mount nfs://localhost/export

Unfortunatelly, it is not possible to execute backend manually with a concrete mount_prefix. Handle key "prefix" as mount_prefix, so you can now execute backend manually with prefix, e.g.:
/usr/libexec/gvfsd-nfs host=localhost prefix=/export
Comment 1 Christian Kellner 2016-08-29 13:09:27 UTC
Review of attachment 334355 [details] [review]:

Should we maybe call g_free(value) in case copy is FALSE (if, e.g. someone calls g_mount_spec_take(spec, "prefix", value)). Also we ignore the len argument, most likely just an optimisation unless someone calls the function with a non-null-terminated char buffer.
Comment 2 Ondrej Holy 2016-08-29 13:53:11 UTC
Created attachment 334367 [details] [review]
common: Handle mount_prefix by g_mount_spec_set

Thanks for a review. This should handle the problems you mentioned...
Comment 3 Ondrej Holy 2016-08-29 14:13:40 UTC
Comment on attachment 334367 [details] [review]
common: Handle mount_prefix by g_mount_spec_set

commit a4ff9a5edb043c8245b9f2fc3ebe452272dd3c0d