common: Handle mount_prefix by g_mount_spec_set

mount_prefix is set to the value "/export" if you e.g. call the following:
gvfs-mount nfs://localhost/export

Unfortunatelly, it is not possible to execute backend manually with a
concrete mount_prefix. Handle key "prefix" as mount_prefix, so you can
now execute backend manually with prefix, e.g.:
/usr/libexec/gvfsd-nfs host=localhost prefix=/export

https://bugzilla.gnome.org/show_bug.cgi?id=770545